; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_vmw_pvscsi.c_pvscsi_release_context.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_vmw_pvscsi.c_pvscsi_release_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pvscsi_adapter = type { i32 }
%struct.pvscsi_ctx = type { i32, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pvscsi_adapter*, %struct.pvscsi_ctx*)* @pvscsi_release_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pvscsi_release_context(%struct.pvscsi_adapter* %0, %struct.pvscsi_ctx* %1) #0 {
  %3 = alloca %struct.pvscsi_adapter*, align 8
  %4 = alloca %struct.pvscsi_ctx*, align 8
  store %struct.pvscsi_adapter* %0, %struct.pvscsi_adapter** %3, align 8
  store %struct.pvscsi_ctx* %1, %struct.pvscsi_ctx** %4, align 8
  %5 = load %struct.pvscsi_ctx*, %struct.pvscsi_ctx** %4, align 8
  %6 = getelementptr inbounds %struct.pvscsi_ctx, %struct.pvscsi_ctx* %5, i32 0, i32 2
  store i32* null, i32** %6, align 8
  %7 = load %struct.pvscsi_ctx*, %struct.pvscsi_ctx** %4, align 8
  %8 = getelementptr inbounds %struct.pvscsi_ctx, %struct.pvscsi_ctx* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.pvscsi_ctx*, %struct.pvscsi_ctx** %4, align 8
  %10 = getelementptr inbounds %struct.pvscsi_ctx, %struct.pvscsi_ctx* %9, i32 0, i32 0
  %11 = load %struct.pvscsi_adapter*, %struct.pvscsi_adapter** %3, align 8
  %12 = getelementptr inbounds %struct.pvscsi_adapter, %struct.pvscsi_adapter* %11, i32 0, i32 0
  %13 = call i32 @list_add(i32* %10, i32* %12)
  ret void
}

declare dso_local i32 @list_add(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
